[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidra_helpers"
version = "1.0.0"
authors = [
  { name="Guilherme da Silva Frainer", email="guilherme.sfrainer@gmail.com" },
]
description = "Helper functions made for personal use to work with the SIDRA API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""