[metadata]
name = sidra_helpers
version = 1.0.3
description = Helper functions made for personal use to work with the SIDRA API
long_description = file: README.md
url = https://github.com/GuilhermeFrainer/sidra_helpers
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires = 
    xlsxwriter
    